--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.37", features = ["derive"] }
 csv = "1.3.1"
 serde = { version = "1.0.219", features = ["derive"] }
-serde_trim = "1.1.0"
