--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
 csv = "1.3.1"
+derive-new = "0.7.0"
 log = "0.4.27"
 serde = { version = "1.0.219", features = ["derive"] }
 simple_logger = "5.0.0"
