--- a/cgpa-bin/Cargo.toml
+++ b/cgpa-bin/Cargo.toml
@@ -2,6 +2,7 @@
 name = "cgpa-bin"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 [[bin]]
 name = "cgpa"
@@ -10,7 +11,13 @@ path = "src/main.rs"
 # TODO: Isolate library and binary into separate workspaces
 # with separate dependencies
 [dependencies]
+anyhow = "1.0"
 cgpa = { version = "0.1", path = "../cgpa-lib" }
 clap = { version = "4.5", features = ["derive"] }
+dirs = "6.0"
 log = "0.4"
+shadow-rs = { version = "1.1", default-features = false }
 simple_logger = "5.0"
+
+[build-dependencies]
+shadow-rs = "1.1"
